--- a/codes/day-1/js-app/index.css
+++ b/codes/day-1/js-app/index.css
@@ -1,6 +1,11 @@
 /* element selector*/
-h2 {
+/*class selector*/
+h2,
+div {
   text-align: center;
+}
+
+h2 {
   background-color: bisque;
   font-family: "Courier New", Courier, monospace;
 }
@@ -15,11 +20,6 @@ h2 {
   background-color: burlywood;
   width: 100px;
   height: 30px;
-}
-
-/*class selector*/
-.centerStyle {
-  text-align: center;
 }
 
 .fontStyle {
