--- a/codes/day-2/first-ng-app/src/app/others/sample/sample.component.html
+++ b/codes/day-2/first-ng-app/src/app/others/sample/sample.component.html
@@ -10,3 +10,6 @@
     <br>
     <button type="button" (click)="updateTitle(titleinput.value)">Update</button>
 </div>
+
+<br><br><br>
+<app-calculator></app-calculator>
