--- a/codes/day-3/pms-app/src/app/products/components/product-list/product-list.component.html
+++ b/codes/day-3/pms-app/src/app/products/components/product-list/product-list.component.html
@@ -1,1 +1,37 @@
-<p>product-list works!</p>
+<ng-template #loadingTemplate>
+    <span>Loading please wait</span>
+</ng-template>
+<ng-template #errorTemplate>
+    <span>{{errorMessage}}</span>
+</ng-template>
+<ng-template #noDataTemplate>
+    <span>Sorry..no record found</span>
+</ng-template>
+<div *ngIf="loadingComplete;else loadingTemplate">
+    <div *ngIf="errorMessage==='';else errorTemplate">
+        <div *ngIf="products; else noDataTemplate">
+            <table>
+                <thead class="headerStyle">
+                    <tr>
+                        <th>Image</th>
+                        <th>Name</th>
+                        <th>Price</th>
+                        <th>Rating</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let p of products">
+                        <td>
+                            <div>
+                                <img [src]="p.imageUrl" alt="NA" [title]="p.productName" class="imgStyle">
+                            </div>
+                        </td>
+                        <td>{{p.productName}}</td>
+                        <td>{{p.price}}</td>
+                        <td>{{p.starRating}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
